[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/ui/gameplay/build-tool/Buttons/FastestTower.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/img/UI/Cartoon GUI/PNG/Buttons/Text/Cartoon RPG UI_Button Text - Gray.png" type="Texture" id=2]
[ext_resource path="res://src/ui/gameplay/build-tool/Buttons/ShotGun.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/gameplay/build-tool/BuildToolSideBar.gd" type="Script" id=4]
[ext_resource path="res://src/ui/gameplay/build-tool/Buttons/ReapeaterTower.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ui/gameplay/build-tool/Buttons/UltimateTower.tscn" type="PackedScene" id=6]

[node name="BuildToolSideBar" type="Node2D"]
script = ExtResource( 4 )

[node name="SideBar" type="Sprite" parent="."]
position = Vector2( 21.4603, 5.15125 )
scale = Vector2( 1.5, 1 )
texture = ExtResource( 2 )

[node name="ReapeaterTower" parent="." instance=ExtResource( 5 )]
anchor_bottom = 0.0
margin_left = -107.046
margin_top = -24.5416
margin_right = -107.046
margin_bottom = -24.5416

[node name="FastestTower" parent="." instance=ExtResource( 1 )]
margin_left = -22.7385
margin_top = -24.2856
margin_right = -22.7385
margin_bottom = -24.2856

[node name="ShotGunTower" parent="." instance=ExtResource( 3 )]
margin_left = 67.3749
margin_top = -24.6676
margin_right = 67.3749
margin_bottom = -24.6676

[node name="UltimateTower" parent="." instance=ExtResource( 6 )]
margin_left = 152.702
margin_top = -24.5637
margin_right = 152.702
margin_bottom = -24.5637
